--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ csv = "1.0.2"
 unicode-segmentation = "1.2.1"
 unicode-width = "0.1.5"
 terminfo = "0.6.1"
+clap = "2.32.0"
 
 [target.'cfg(unix)'.dependencies]
 nix = "0.9.0"
