Switch from pancurses to calling ncurses directly. While being cross-platform is still desired, I never tested anything on Windows, and pancurses seems to get even more broken with the most recent versions (returning modified arrow keys as indistinguishable from ASCII characters).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Jonathan S <gereeter+code@gmail.com>"]
 
 [dependencies]
-pancurses = "0.13.0"
+ncurses = "5.97.0"
 csv = "1.0.2"
 unicode-segmentation = "1.2.1"
 unicode-width = "0.1.5"
